Add navigation bar and logo to index.html; update styles in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,3 +16,15 @@
   body.debug {
     background: #f5f5f5;
   }
+
+  /* Nav Bar */
+  .nav-bar{
+    height: ;
+  }
+
+
+  /* Logo */
+.logo {
+    width: 120px;
+    height: 30px;
+}
