--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,12 @@
 
   /* Nav Bar */
   .nav-bar{
-    height: ;
+    width: 90%;
+    max-width: 1200px;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
 
 
