Add top-left navigation links with styling and font

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,3 +39,12 @@
     display: flex;
     gap: 15px;
   }
+
+  /* Top Left  */
+
+.top-left a{
+    gap: 30px;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
