--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: #ff6900;
   }
 
 
@@ -46,5 +47,6 @@
     gap: 30px;
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
+    color: var(--boo-bg);
 
 }
