--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,16 @@
     background: #f5f5f5;
   }
 
+
+  .top-banner {
+    width: 100%;
+    height: 60px; /* Banner height */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+
   /* Nav Bar */
   .nav-bar{
     width: 90%;
@@ -39,6 +49,9 @@
 .icon-top-right {
     display: flex;
     gap: 15px;
+    color: #ffffff;
+    padding-right: 2%;
+
   }
 
   /* Top Left  */
@@ -47,6 +60,5 @@
     gap: 30px;
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
-    color: var(--boo-bg);
-
+    color: var(--boo-bg);    
 }
