--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,3 +92,11 @@ main{
     display: flex;
     gap: 10px;
 }
+
+div .image-container{
+    position: relative; 
+      width: 100%; 
+      height: 100%; 
+      overflow: hidden;
+
+}
