--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,9 +94,15 @@ main{
 }
 
 div .image-container{
-    position: relative; 
-      width: 100%; 
-      height: 100%; 
-      overflow: hidden;
+    position: relative;  
+    overflow: hidden;
+}
+.image-top .image-low{
+  position: absolute; 
+  top: 0;
+  left: 0;
+  width: 100%; 
+  height: 100%; 
+  
 
 }
