--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,16 +93,25 @@ main{
     gap: 10px;
 }
 
-div .image-container{
-    position: relative;  
-    overflow: hidden;
+.image-container{
+    position: relative;
+    width: 100%; 
+    height: 652px;  
+
 }
-.image-top .image-low{
+.image-top, .image-low{
   position: absolute; 
   top: 0;
   left: 0;
   width: 100%; 
   height: 100%; 
-  
+}
 
+.image-low{
+    opacity: 0;
+}
+
+
+.image-container:hover .image-low{
+    opacity: 1;
 }
