--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,3 +115,22 @@ main{
 .image-container:hover .image-low{
     opacity: 1;
 }
+
+
+/* <---------- Footer -----------> */
+
+footer{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 4%;
+
+}
+
+ul{
+    list-style-type: none
+}
+
+.d-flex{
+    display: flex;
+    justify-content: space-between;
+}
